fehler behoben und farben geändert

--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-main.css
 
 /* CSS-Stile für die Neuseelandreise */
 
@@ -26,9 +25,9 @@ main {
     max-width: 1024px;
     margin: auto;
     margin-top: -50px;
-    border-left: 1px dashed grey;
-    border-right: 1px dashed grey;
-    border-bottom: 1px dashed grey;
+    border-left: 1px dashed darkgoldenrod;
+    border-right: 1px dashed darkgoldenrod;
+    border-bottom: 1px dashed darkgoldenrod;
 }
 
 article {
@@ -51,10 +50,10 @@ article figure>img {
     width: 100%;
 }
 
-#map { /
+#map { 
     width: 90%;
     height: 600px;
-    border: 1px solid silver;
+    border: 1px solid lightseagreen
     margin: auto;
 }
 
@@ -69,7 +68,7 @@ footer nav {
 }
 
 a {
-    color: black;
+    color: darkolivegreen;
 }
 
 header img,
